Set up super page as well as control center

--- a/css/login.css
+++ b/css/login.css
@@ -1,50 +1,101 @@
 body {
-    background-color: #222222;
-    background: repeating-linear-gradient(45deg, #2b2b2b 0%, #2b2b2b 10%, #222222 0%, #222222 50%) 0 / 15px 15px;
+  background-color: #222222;
+  background: repeating-linear-gradient(
+      45deg,
+      #2b2b2b 0%,
+      #2b2b2b 10%,
+      #222222 0%,
+      #222222 50%
+    )
+    0 / 15px 15px;
 }
 
 #primary-brand {
-    color: #039BE6;
-    text-shadow: 3px 3px #212529;
+  color: #039be6;
+  text-shadow: 3px 3px #212529;
 }
 .navbar-brand {
-    color: #40da55;
-    text-shadow: 3px 3px #212529;
+  color: #40da55;
+  text-shadow: 3px 3px #212529;
 }
 
 .card-section {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .card {
-    background-color: #212529;
-    color: whitesmoke;
-    border-radius: 2px;
-    border: 1px solid #ffffff;
-    box-shadow: 0 0 5px #c8e0cb, 0 0 10px #c8e0cb, 0 0 15px #c8e0cb,
-    0 0 20px #40da55, 0 0 35px #40da55, 0 0 40px #40da55, 0 0 50px #40da55, 0 0 75px #40da55;
+  background-color: #212529;
+  color: whitesmoke;
+  border-radius: 2px;
+  border: 1px solid #ffffff;
+  box-shadow: 0 0 5px #c8e0cb, 0 0 10px #c8e0cb, 0 0 15px #c8e0cb,
+    0 0 20px #40da55, 0 0 35px #40da55, 0 0 40px #40da55, 0 0 50px #40da55,
+    0 0 75px #40da55;
 }
 
 .bufferRow {
-    margin: 50px;
-
+  margin: 50px;
 }
 
 .description-section {
-    margin-top: 25px;
-    color: whitesmoke;
+  margin-top: 25px;
+  color: whitesmoke;
 }
 
 .login-label {
-    color: #039BE6;
+  color: #039be6;
 }
 
 .btn-login {
-    font-weight: 600;
-    width: 50%;
-    color: #212529;
-    background-color: #40da55;
-    border: none;
-    border-radius: 1.5rem;
-    padding: 2%;
+  font-weight: 600;
+  width: 50%;
+  color: #212529;
+  background-color: #40da55;
+  border: none;
+  border-radius: 1.5rem;
+  padding: 2%;
+}
+
+.name-heading {
+  font-size: 80px;
+  font-weight: bolder;
+  margin-top: 3vh;
+  margin-right: 0;
+  margin-left: 20px;
+  color: #40da55;
+  text-shadow: -1px 1px 0 #039be6, -2px 2px 0 #039be6, -3px 3px 0 #039be6,
+    -4px 4px 0 #039be6, -5px 5px 0 #039be6, -6px 6px 0 #039be6,
+    -7px 7px 0 #039be6, -8px 8px 0 #039be6, -9px 9px 0 #039be6,
+    -10px 10px 0 #039be6, -11px 11px 0 #039be6;
+}
+
+#position-heading {
+  margin-top: 15px;
+}
+
+#positionLabel {
+  margin: 0;
+  font-size: 30px;
+  font-weight: 400;
+  justify-content: center;
+  color: #40da55;
+}
+#positionValue {
+  margin: 0;
+  font-size: 30px;
+  font-weight: 200;
+  justify-content: center;
+  color: #039be6;
+}
+
+.btn-logout {
+  width: 80%;
+  background-color: #039be6;
+}
+
+.control-center-heading {
+  justify-content: center;
+  color: #40da55;
+  font-size: 60px;
+  font-weight: bold;
 }
